@@ -3,7 +3,6 @@ package com.rebin.booking.product.dto.response;
 import com.rebin.booking.product.domain.Product;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record ProductDetailResponse(
         Long id,
@@ -15,15 +14,14 @@ public record ProductDetailResponse(
         List<ProductImageResponse> images,
         String guideLine,
         int deposit,
-        int additionalFee,
-        boolean isMemberLike
+        int additionalFee
 
 ) {
-    public static ProductDetailResponse of(Product product, boolean isMemberLike) {
+    public static ProductDetailResponse of(Product product) {
         List<ProductImageResponse> imageResponses = product.getImages()
                 .stream()
                 .map(ProductImageResponse::of)
-                .collect(Collectors.toList());
+                .toList();
 
         return new ProductDetailResponse(
                 product.getId(),
@@ -35,8 +33,7 @@ public record ProductDetailResponse(
                 imageResponses,
                 product.getGuideLine(),
                 product.getDeposit(),
-                product.getAdditionalFee(),
-                isMemberLike
+                product.getAdditionalFee()
         );
     }
 }
